--- a/common/css/style.css
+++ b/common/css/style.css
@@ -17,7 +17,7 @@ CSSを書く時のルール
 
 .contents {
     width: 800px;
-    margin:0 auto;
+    margin:0 auto 30px auto;
 }
 
 @media (max-width: 800px) {
@@ -68,6 +68,7 @@ CSSを書く時のルール
 
 .contentsLink__left a {
     text-decoration: none;
+    color: #0c419a;
 }
 
 .contentsLink__right {
@@ -78,6 +79,7 @@ CSSを書く時のルール
 
 .contentsLink__right a {
     text-decoration: none;
+    color: #0c419a;
 }
 
 .contentsLink__icon {
@@ -199,13 +201,14 @@ CSSを書く時のルール
 }
 
 .corpInfo__title {
-    padding: 30px 15px;
+    padding: 30px 0;
+    border-top: #666 solid 2px;
     border-bottom: gray dotted 1px;
     font-family: 'Noto Sans JP', sans-serif;
 }
 
 .corpInfo__subTitle {
-    padding: 15px;
+    padding: 15px 0;
     margin: 0;
     font-style: bold;
     font-family: 'Noto Sans JP', sans-serif;
@@ -483,7 +486,7 @@ CSSを書く時のルール
 .snsShare__text {
     font-size:12px;
     font-weight: bold;
-    color:gray;
+    color:#666;
 }
 
 .snsShare__icon {
@@ -540,8 +543,10 @@ CSSを書く時のルール
 
 .thum__text {
     position: absolute;
-    top: 25px;
-    left: 10%;
+    max-width:1000px;
+    top: 40px;
+    left:0;
+    right:0;
     margin:auto;
     color: white;
 }
